--- a/frontend/react_app/package.json
+++ b/frontend/react_app/package.json
@@ -12,10 +12,13 @@
     "build": "react-scripts build"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "axios": "^0.21.0",
+    "date-fns": "^2.8.1",
     "eslint": "6.8.0",
     "history": "^5.0.0",
     "prop-types": "^15.7.2",
