--- a/frontend/react_app/package.json
+++ b/frontend/react_app/package.json
@@ -17,10 +17,13 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
+    "@toast-ui/react-calendar": "^1.0.5",
     "axios": "^0.21.0",
     "date-fns": "^2.8.1",
     "eslint": "6.8.0",
+    "google-maps-react": "^2.0.6",
     "history": "^5.0.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "^16.14.0",
