--- a/backend/grouptraveltracker_api/requirements.txt
+++ b/backend/grouptraveltracker_api/requirements.txt
@@ -29,6 +29,7 @@ pycparser==2.20
 PyJWT==1.7.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.15.0
 python3-openid==3.2.0
 pytz==2020.4
 requests==2.24.0
